Fix map edit area on small screens.
Force map to be at least 300px height.

Fixes #515.

--- a/localwiki/themes/sapling/assets/css/site.css
+++ b/localwiki/themes/sapling/assets/css/site.css
@@ -1392,9 +1392,9 @@ form #content_footer {
     margin-top: -1em;
 }
 .mapdata form #content_footer {
-    padding-left: 5em;
-    padding-right: 5em;
-    margin-top: 0.16em;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+    margin-top: 1em;
 }
 
 @media screen and (max-width: 1075px) {
@@ -1468,6 +1468,11 @@ form #content_footer {
         width: 100%;
     }
 
+    .mapdata form #content_footer {
+        padding-left: 1em;
+        padding-right: 1em;
+    }
+
     #editor_actions .button {
         float: none;
     }
@@ -1501,4 +1506,9 @@ form #content_footer {
     position: absolute;
     left: 130px;
     margin-top: 10px;
+}
+@media screen and (max-width: 500px) {
+    .olControlLayerSwitcher {
+        display: none;    
+    }
 }
